tests/invalid/protected_member_access_outside_hierarchy.wio
object GuardedBase {
    protected hp: i32 = 10;
}

fn Entry(args: string[]) -> i32 {
    let base = GuardedBase();
    return base.hp;
}
